Remove enable-preview.